Optimized the settings of the notification window and adjusted the css style and animation effects. 1.Introduce an additional state shouldRender in the Notification component to control the rendering of the component, while isVisible only controls the display. This allows a slight delay before starting the transition effect after the component is mounted to avoid problems caused by rendering optimization. 2. Each notification handles its own display and hiding logic independently, and the parent component is only responsible for removing the notification when it really needs to be removed. This ensures that when multiple notifications exist at the same time, each notification's animation plays and ends independently and correctly. At the same time, this approach improves the encapsulation and independence of components. 3. The animation can be played normally when the user submits the form by pressing Enter. At the same time, when the queue changes, there will also be an animation effect to move the elements up, seamlessly.

--- a/yifanovo_web/src/pages/HomePage.css
+++ b/yifanovo_web/src/pages/HomePage.css
@@ -136,6 +136,7 @@
 .inputButtonContainerStyle {
   display: flex;
   align-items: left;
+  z-index: 1001;
   background: #12121200;
   border-radius: 15px;
   border: 1.5px solid #4a4d54;
